Name:               lambda-ccc
Version:            0.4
Cabal-Version:      >= 1.8
Synopsis:           Convert lambda expressions to CCC combinators
Category:           language
Description:        Convert lambda expressions to CCC combinators
Author:             Conal Elliott
Maintainer:         conal@conal.net
Homepage:           http://github.com/conal/lambda-ccc
Copyright:          (c) 2013-2014 by Tabula, Inc
License:            BSD3
License-File:       COPYING
Stability:          experimental
build-type:         Simple

Extra-Source-Files:
                    test/Tests.hs
                    test/Tests.hss

source-repository head
  type:             git
  location:         git://github.com/conal/lambda-ccc

Library
  hs-Source-Dirs:   src/
  Build-Depends:    base < 5
                  , ghc >= 7.6
                  , ghc-prim
                  , transformers
                  , mtl
                  , containers
                  , constraints
                  , kure >= 2.16.0
                  , hermit >= 0.5.0.1
                  , ty >= 0.1.5
                  , type-unary >= 0.2.16
                  , circat >= 0.3
                  , hermit-extras >= 0.2
                  , MemoTrie

--                  , type-encode

  Exposed-Modules:  LambdaCCC.Misc
                    LambdaCCC.ShowUtils
                    LambdaCCC.Prim
                    LambdaCCC.Lambda
                    LambdaCCC.CCC
                    LambdaCCC.ToCCC
--                     LambdaCCC.Encode
--                     LambdaCCC.CoreEncode
                    LambdaCCC.Monomorphize
--                     LambdaCCC.TransCode
--                     LambdaCCC.Standardize
--                     LambdaCCC.CoerceEncode
--                     LambdaCCC.Recastable
                    LambdaCCC.Run
                    LambdaCCC.StateTrie
                    LambdaCCC.Adder

--                     LambdaCCC.Examples.Linear
-- Phasing out:

--                     LambdaCCC.Reify
                    LambdaCCC.ReifySimple
--                     LambdaCCC.SReify
--                     LambdaCCC.NormalizeCore



--                     LambdaCCC.Ty
--                     LambdaCCC.MkStringExpr
--                     LambdaCCC.ReifyLambda
--                     LambdaCCC.ToCircuit

  Other-Modules:
                    LambdaCCC.Tests

-- Test-Suite test1
--     hs-Source-Dirs:   test
--     type:       exitcode-stdio-1.0
--     main-is:    SimpleMain.hs
--     build-depends: base, circat, lambda-ccc

