Name:               lambda-ccc
Version:            0.5
Cabal-Version:      >= 1.8
Synopsis:           Convert lambda expressions to CCC combinators
Category:           language
Description:        Convert lambda expressions to CCC combinators
Author:             Conal Elliott
Maintainer:         conal@conal.net
Homepage:           http://github.com/conal/lambda-ccc
Copyright:          (c) 2013-2014 by Tabula, Inc
License:            BSD3
License-File:       COPYING
Stability:          experimental
build-type:         Simple

Extra-Source-Files:
                    test/Examples.hs

source-repository head
  type:             git
  location:         git://github.com/conal/lambda-ccc

Library
  hs-Source-Dirs:   src/
  Build-Depends:    base < 5
                  , ghc >= 7.6
                  , ghc-prim
                  , transformers
                  , mtl
                  , containers
                  , kure >= 2.16.0
                  , hermit >= 0.5.0.1
                  , ty >= 0.1.5
                  , type-unary >= 0.2.21
                  , MemoTrie
                  , circat >= 0.6.3
                  , hermit-extras >= 0.2.2
                  , monomorph
                  , QuickCheck >= 2.7.3

  Exposed-Modules:  LambdaCCC.Misc
                    LambdaCCC.ShowUtils
                    LambdaCCC.Lambda
                    LambdaCCC.ToCCC
                    LambdaCCC.Reify
                    LambdaCCC.Interactive
                    LambdaCCC.Plugin
                    LambdaCCC.Run
                    LambdaCCC.StateTrie
                    LambdaCCC.Adder
                    LambdaCCC.CRC
                    LambdaCCC.Bitonic
                    LambdaCCC.RadixSort
                    LambdaCCC.Counters
  Other-Modules:
                    LambdaCCC.Tests

-- Test-Suite test1
--     hs-Source-Dirs:   test
--     type:       exitcode-stdio-1.0
--     main-is:    SimpleMain.hs
--     build-depends: base, circat, lambda-ccc

